--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
                 }
             }
 
+            .sidebar {
+                position: sticky;
+                top: 0;
+                z-index: 998;
+            }
+
             .sidebar .nav-link {
                 color: #333;
             }
@@ -104,24 +110,24 @@
                         </ul>
                     </div>
                 </nav>
-                <main class="col-md-9 ml-sm-auto col-lg-10 px-md-4 py-4 text-white" style="background-color: #151521">
+                <main class="col-md-9 ml-sm-auto col-lg-10 px-md-4 py-4 text-white" style="background-color: #151521; height: 100vh !important">
                     <nav aria-label="breadcrumb"></nav>
                     <h1 class="h2">Dashboard</h1>
-                    <p>This is the homepage of a simple admin interface which is part of a tutorial written on Themesberg</p>
+                    <p>This is the homepage of a simple admin interface</p>
                     <div class="row my-4">
                         <div class="col-12 col-md-6 col-lg-3 mb-4 mb-lg-0">
                             <div class="card">
                                 <h5 class="card-header">Customers</h5>
                                 <div class="card-body">
-                                    <h5 class="card-title">345k</h5>
-                                    <p class="card-text">Feb 1 - Apr 1, United States</p>
+                                    <h5 class="card-title">345</h5>
+                                    <p class="card-text">United States</p>
                                     <p class="card-text text-success">18.2% increase since last month</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-12 col-md-6 mb-4 mb-lg-0 col-lg-3">
                             <div class="card">
-                                <h5 class="card-header">Revenue</h5>
+                                <h5 class="card-header">Products</h5>
                                 <div class="card-body">
                                     <h5 class="card-title">$2.4k</h5>
                                     <p class="card-text">Feb 1 - Apr 1, United States</p>
@@ -153,13 +159,13 @@
                     <div class="row">
                         <div class="col-12 col-xl-8 mb-4 mb-lg-0">
                             <div class="card">
-                                <h5 class="card-header">Latest transactions</h5>
+                                <h5 class="card-header">Latest Products</h5>
                                 <div class="card-body">
                                     <div class="table-responsive">
                                         <table class="table">
                                             <thead>
                                                 <tr>
-                                                    <th scope="col">Order</th>
+                                                    <th scope="col">Id</th>
                                                     <th scope="col">Product</th>
                                                     <th scope="col">Customer</th>
                                                     <th scope="col">Total</th>
@@ -169,51 +175,11 @@
                                             </thead>
                                             <tbody>
                                                 <tr>
-                                                    <th scope="row">17371705</th>
-                                                    <td>Volt Premium Bootstrap 5 Dashboard</td>
+                                                    <th scope="row">173</th>
+                                                    <td>Glorious Model O</td>
                                                     <td>johndoe@gmail.com</td>
                                                     <td>€61.11</td>
                                                     <td>Aug 31 2020</td>
-                                                    <td><a href="#" class="btn btn-sm btn-primary">View</a></td>
-                                                </tr>
-                                                <tr>
-                                                    <th scope="row">17370540</th>
-                                                    <td>Pixel Pro Premium Bootstrap UI Kit</td>
-                                                    <td>jacob.monroe@company.com</td>
-                                                    <td>$153.11</td>
-                                                    <td>Aug 28 2020</td>
-                                                    <td><a href="#" class="btn btn-sm btn-primary">View</a></td>
-                                                </tr>
-                                                <tr>
-                                                    <th scope="row">17371705</th>
-                                                    <td>Volt Premium Bootstrap 5 Dashboard</td>
-                                                    <td>johndoe@gmail.com</td>
-                                                    <td>€61.11</td>
-                                                    <td>Aug 31 2020</td>
-                                                    <td><a href="#" class="btn btn-sm btn-primary">View</a></td>
-                                                </tr>
-                                                <tr>
-                                                    <th scope="row">17370540</th>
-                                                    <td>Pixel Pro Premium Bootstrap UI Kit</td>
-                                                    <td>jacob.monroe@company.com</td>
-                                                    <td>$153.11</td>
-                                                    <td>Aug 28 2020</td>
-                                                    <td><a href="#" class="btn btn-sm btn-primary">View</a></td>
-                                                </tr>
-                                                <tr>
-                                                    <th scope="row">17371705</th>
-                                                    <td>Volt Premium Bootstrap 5 Dashboard</td>
-                                                    <td>johndoe@gmail.com</td>
-                                                    <td>€61.11</td>
-                                                    <td>Aug 31 2020</td>
-                                                    <td><a href="#" class="btn btn-sm btn-primary">View</a></td>
-                                                </tr>
-                                                <tr>
-                                                    <th scope="row">17370540</th>
-                                                    <td>Pixel Pro Premium Bootstrap UI Kit</td>
-                                                    <td>jacob.monroe@company.com</td>
-                                                    <td>$153.11</td>
-                                                    <td>Aug 28 2020</td>
                                                     <td><a href="#" class="btn btn-sm btn-primary">View</a></td>
                                                 </tr>
                                             </tbody>
@@ -222,30 +188,14 @@
                                     <a href="#" class="btn btn-block btn-light">View all</a>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-12 col-xl-4">
-                            <div class="card">
-                                <h5 class="card-header">Traffic last 6 months</h5>
-                                <div class="card-body">
-                                    <div id="traffic-chart"></div>
-                                </div>
-                            </div>
+
+                            <footer class="d-inline-block justify-content-between">
+                                <span>Copyright © 2022 BY Anass KASSEMI</span>
+
+                                <a class="nav-link text-secondary" href="#">Contact</a>
+                            </footer>
                         </div>
                     </div>
-                    <footer class="pt-5 d-flex justify-content-between">
-                        <span>Copyright © 2019-2020 <a href="https://themesberg.com">Themesberg</a></span>
-                        <ul class="nav m-0">
-                            <li class="nav-item">
-                                <a class="nav-link text-secondary" aria-current="page" href="#">Privacy Policy</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-secondary" href="#">Terms and conditions</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-secondary" href="#">Contact</a>
-                            </li>
-                        </ul>
-                    </footer>
                 </main>
             </div>
         </div>
