FrontEnd phase, more sidebar fixes

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                     top: 11.5rem;
                     padding: 0;
                 }
+                .sidebar {
+                    position: initial;
+                }
             }
 
             .navbar {
@@ -46,13 +49,6 @@
                     z-index: 999;
                 }
             }
-
-            .sidebar {
-                position: sticky;
-                top: 0;
-                z-index: 998;
-            }
-
             .sidebar .nav-link {
                 color: #333;
             }
@@ -130,7 +126,7 @@
                                 <h5 class="card-header">Products</h5>
                                 <div class="card-body">
                                     <h5 class="card-title">$2.4k</h5>
-                                    <p class="card-text">Feb 1 - Apr 1, United States</p>
+                                    <p class="card-text">China</p>
                                     <p class="card-text text-success">4.6% increase since last month</p>
                                 </div>
                             </div>
@@ -140,7 +136,7 @@
                                 <h5 class="card-header">Purchases</h5>
                                 <div class="card-body">
                                     <h5 class="card-title">43</h5>
-                                    <p class="card-text">Feb 1 - Apr 1, United States</p>
+                                    <p class="card-text">Worldwide</p>
                                     <p class="card-text text-danger">2.6% decrease since last month</p>
                                 </div>
                             </div>
@@ -150,7 +146,7 @@
                                 <h5 class="card-header">Traffic</h5>
                                 <div class="card-body">
                                     <h5 class="card-title">64k</h5>
-                                    <p class="card-text">Feb 1 - Apr 1, United States</p>
+                                    <p class="card-text">Worldwide</p>
                                     <p class="card-text text-success">2.5% increase since last month</p>
                                 </div>
                             </div>
