--- a/index.html
+++ b/index.html
@@ -28,6 +28,24 @@
                 /* z-index: 99; */
             }
 
+            .navbar {
+                box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.1);
+            }
+            .card {
+                background-color: #1e1e2d !important;
+            }
+            .sidebar .nav-link {
+                color: #333;
+            }
+
+            .active {
+                background-color: #4059a0 !important;
+            }
+            .content {
+                background-color: #151521;
+                display: block;
+                height: 100vh;
+            }
             @media (max-width: 767.98px) {
                 .sidebar {
                     top: 11.5rem;
@@ -36,10 +54,9 @@
                 .sidebar {
                     position: initial;
                 }
-            }
-
-            .navbar {
-                box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.1);
+                .content {
+                    height: auto;
+                }
             }
 
             @media (min-width: 767.98px) {
@@ -49,30 +66,48 @@
                     z-index: 999;
                 }
             }
-            .sidebar .nav-link {
-                color: #333;
-            }
-
-            .sidebar .nav-link.active {
-                color: #0d6efd;
-            }
         </style>
     </head>
     <body>
-        <nav class="navbar navbar-light p-3" style="background-color: #32324a">
+        <nav id="sidebar" class="col-md-3 col-lg-2 d-md-block sidebar collapse" style="background-color: #1e1e2d">
+            <a class="" href="#"><img src="assets/img/Logo.png" alt="" style="width: 11rem; height: 8rem; margin-left: 2rem" /></a>
+            <div class="position mt-5">
+                <ul class="nav nav-pills flex-column">
+                    <li class="nav-item m-2">
+                        <a class="nav-link active" aria-current="page" href="#">
+                            <i class="text-white fa fa-house"></i>
+                            <span class="m-4 text-white">Home</span>
+                        </a>
+                    </li>
+                    <li class="nav-item m-2">
+                        <a class="nav-link" href="#">
+                            <i class="fa fa-boxes-stacked text-white"></i>
+                            <span class="m-4 text-white">Products</span>
+                        </a>
+                    </li>
+                    <li class="nav-item m-2">
+                        <a class="nav-link" href="#">
+                            <i class="fa fa-list text-white"></i>
+                            <span class="m-4 text-white">Categorie</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <nav class="navbar navbar-light overflow-hidden" style="background-color: #32324a">
             <div class="d-flex col-12 col-md-3 col-lg-2 mb-2 mb-lg-0 flex-wrap flex-md-nowrap justify-content-between">
                 <button class="navbar-toggler d-md-none collapsed mb-3" type="button" data-toggle="collapse" data-target="#sidebar" aria-controls="sidebar" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
             </div>
 
-            <div class="col-12 col-md-4 col-lg-2">
+            <div class="col-12 col-md-2 col-lg-2">
                 <input class="form-control form-control-dark" type="text" placeholder="Search" aria-label="Search" />
             </div>
-            <div class="col-12 col-md-5 col-lg-8 d-flex align-items-center justify-content-md-end mt-3 mt-md-0">
+            <div class="col-12 col-md-5 col-lg-7 d-flex align-items-center justify-content-md-end mr-5 mt-3 mt-md-0">
                 <div class="dropdown">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-expanded="false">Hello, John Doe</button>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-expanded="false">John Doe</button>
+                    <ul class="dropdown-menu active" aria-labelledby="dropdownMenuButton">
                         <li><a class="dropdown-item" href="#">Settings</a></li>
                         <li><a class="dropdown-item" href="#">Sign out</a></li>
                     </ul>
@@ -80,33 +115,8 @@
             </div>
         </nav>
         <div class="container-fluid" style="background-color: #151521">
-            <div class="row">
-                <nav id="sidebar" class="col-md-3 col-lg-2 d-md-block sidebar collapse" style="background-color: #1e1e2d">
-                    <a class="" href="#"><img src="assets/img/Logo.png" alt="" style="width: 11rem; height: 8rem; margin-left: 2rem" /></a>
-                    <div class="position-sticky mt-5">
-                        <ul class="nav nav-pills flex-column">
-                            <li class="nav-item m-2">
-                                <a class="nav-link active" aria-current="page" href="#">
-                                    <i class="text-white fa fa-house"></i>
-                                    <span class="m-4 text-white">Home</span>
-                                </a>
-                            </li>
-                            <li class="nav-item m-2">
-                                <a class="nav-link" href="#">
-                                    <i class="fa fa-boxes-stacked text-white"></i>
-                                    <span class="m-4 text-white">Products</span>
-                                </a>
-                            </li>
-                            <li class="nav-item m-2">
-                                <a class="nav-link" href="#">
-                                    <i class="fa fa-list text-white"></i>
-                                    <span class="m-4 text-white">Categorie</span>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
-                <main class="col-md-9 ml-sm-auto col-lg-10 px-md-4 py-4 text-white" style="background-color: #151521; height: 100vh !important">
+            <div class="">
+                <main class="content col-md-9 ml-sm-auto col-lg-10 px-md-4 p-4 text-white">
                     <nav aria-label="breadcrumb"></nav>
                     <h1 class="h2">Dashboard</h1>
                     <p>This is the homepage of a simple admin interface</p>
@@ -158,7 +168,7 @@
                                 <h5 class="card-header">Latest Products</h5>
                                 <div class="card-body">
                                     <div class="table-responsive">
-                                        <table class="table">
+                                        <table class="table text-white">
                                             <thead>
                                                 <tr>
                                                     <th scope="col">Id</th>
@@ -181,39 +191,24 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a href="#" class="btn btn-block btn-light">View all</a>
+                                    <a href="#" class="btn btn-block btn-dark">View all</a>
                                 </div>
                             </div>
-
-                            <footer class="d-inline-block justify-content-between">
-                                <span>Copyright © 2022 BY Anass KASSEMI</span>
-
-                                <a class="nav-link text-secondary" href="#">Contact</a>
-                            </footer>
                         </div>
                     </div>
+                    <footer class="d-flex align-items-end justify-content-between">
+                        <span>Copyright © 2022 BY Anass KASSEMI</span>
+
+                        <a class="nav-link text-secondary" href="#">Contact</a>
+                    </footer>
                 </main>
             </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
         <!-- Github buttons -->
         <script async defer src="https://buttons.github.io/buttons.js"></script>
-        <script>
-            new Chartist.Line(
-                '#traffic-chart',
-                {
-                    labels: ['January', 'Februrary', 'March', 'April', 'May', 'June'],
-                    series: [[23000, 25000, 19000, 34000, 56000, 64000]],
-                },
-                {
-                    low: 0,
-                    showArea: true,
-                }
-            );
-        </script>
     </body>
 </html>
