--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Bootstrap 5 Simple Admin Dashboard</title>
+        <title>Origin Gamer - Dashboard</title>
         <link
             rel="stylesheet"
             href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
@@ -16,61 +16,11 @@
             integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
             crossorigin="anonymous"
             referrerpolicy="no-referrer" />
-        <style>
-            .sidebar {
-                position: fixed;
-                top: 0;
-                bottom: 0;
-                left: 0;
-                z-index: 1000;
-                /* padding: 90px 0 0; */
-                box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.1);
-                /* z-index: 99; */
-            }
-
-            .navbar {
-                box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.1);
-            }
-            .card {
-                background-color: #1e1e2d !important;
-            }
-            .sidebar .nav-link {
-                color: #333;
-            }
-
-            .active {
-                background-color: #4059a0 !important;
-            }
-            .content {
-                background-color: #151521;
-                display: block;
-                height: 100vh;
-            }
-            @media (max-width: 767.98px) {
-                .sidebar {
-                    top: 11.5rem;
-                    padding: 0;
-                }
-                .sidebar {
-                    position: initial;
-                }
-                .content {
-                    height: auto;
-                }
-            }
-
-            @media (min-width: 767.98px) {
-                .navbar {
-                    top: 0;
-                    position: sticky;
-                    z-index: 999;
-                }
-            }
-        </style>
+        <link rel="stylesheet" href="assets/css/main.css" />
     </head>
     <body>
         <nav id="sidebar" class="col-md-3 col-lg-2 d-md-block sidebar collapse" style="background-color: #1e1e2d">
-            <a class="" href="#"><img src="assets/img/Logo.png" alt="" style="width: 11rem; height: 8rem; margin-left: 2rem" /></a>
+            <a class="" href="#"><img src="assets/img/Logo.png" alt="" class="logo" /></a>
             <div class="position mt-5">
                 <ul class="nav nav-pills flex-column">
                     <li class="nav-item m-2">
@@ -163,7 +113,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-12 col-xl-8 mb-4 mb-lg-0">
+                        <div class="col-12 col-xl-12 mb-4 mb-lg-0">
                             <div class="card">
                                 <h5 class="card-header">Latest Products</h5>
                                 <div class="card-body">
@@ -204,7 +154,6 @@
                 </main>
             </div>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
